zz-out/pass14_run/zz-scripts/chapter08/plot_fig04_chi2_heatmap.err
  File "/home/jplal/MCGT/zz-scripts/chapter08/plot_fig04_chi2_heatmap.py", line 107
    passimport traceback
               ^^^^^^^^^
SyntaxError: invalid syntax
